Runnable host runtime, task manager accessible from web interface. * added a debugging security policy * modified host runtime and task manager launching scripts * added dependency of web interface on task manager * added deploy scripts for host runtime and web interface * modified deploy script for task manager
fixes #26